[tool.poetry]
name = "odin"
version = "0.1.0"
description = "Odin is a Data Interface"
authors = ["Quentin Marolleau <quentin.marolleau@institutoptique.fr>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
